# moSoundFaust

./: .gitmodules  Makefile.am  README.md  configure.ac  moEffectSoundFaust.cpp  moEffectSoundFaust.h  soundfaust.cbp  soundfaustlinux.cbp
dsp-faust-portaudio/: DspFaust.cpp  DspFaust.h  README.md
